--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,5 +10,20 @@
     <button type="submit" >Выйти из личного кабинета</button>
 </form>
 <a href="admin/product/add">Добавить товар</a>
+<hr>
+<div th:each="product : ${products}">
+    <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
+    <p th:text="'Описание: ' + ${product.getDescription()}"></p>
+    <p th:text="'Цена: ' + ${product.getPrice()}"></p>
+    <p th:text="'Склад: ' + ${product.getWarehouse()}"></p>
+    <p th:text="'Продавец: ' + ${product.getSeller()}"></p>
+    <p th:text="'Категория: ' + ${product.getCategory().getTitle()}"></p>
+<!--    Ссылка на редактирование товара. Внедряем динамическую переменную в ID и -->
+<!--    потом будем её принимать в контроллере-->
+    <a th:href="@{/admin/product/edit/{id}(id=${product.getId()})}">Редактирование товара</a>
+    <a th:href="@{/admin/product/delete/{id}(id=${product.getId()})}">Удаление товара</a>
+    <hr>
+    <br>
+</div>
 </body>
 </html>
